Fix CI test env: add dbus-launch for D-Bus, writable /tmp logs, explicit failure on missing logs [run-ci]

--- a/.github/workflows/test-gnome-extension.yml
+++ b/.github/workflows/test-gnome-extension.yml
@@ -25,33 +25,22 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build Extension ZIP
         run: |
-          glib-compile-schemas schemas/  # Compiles org.gnome.shell.extensions.centerwindow.gschema.xml to gschemas.compiled
+          glib-compile-schemas schemas/
           zip -r extension.zip metadata.json extension.js prefs.js schemas/
       - name: Build Custom Docker Image
         run: docker build --build-arg FEDORA_TAG=${{ matrix.fedora-tag }} -t gnome-test:${{ matrix.gnome-version }} -f Dockerfile .
       - name: Run Test in Container
         run: |
           docker run --rm -v $(pwd):/app --user root gnome-test:${{ matrix.gnome-version }} bash -c "
-            # Install the extension ZIP (unzips to ~/.local/share/gnome-shell/extensions/center-window@mmc/)
-            gnome-extensions install /app/extension.zip --force
-            
-            # Enable the extension
             Xvfb :99 -screen 0 1024x768x24 &
             export DISPLAY=:99
-            gnome-extensions enable center-window@mmc
-            
-            # Start nested Wayland GNOME Shell session in background with verbose logging
+            dbus-launch --exit-with-session gnome-extensions install /app/extension.zip --force
+            dbus-launch --exit-with-session gnome-extensions enable center-window@mmc
             dbus-run-session -- gnome-shell --nested --wayland --verbose > /tmp/shell.log 2>&1 &
             SHELL_PID=\$!
-            
-            # Wait for initialization (adjust sleep if needed for slower loads)
             sleep 15
-            
-            # Stop the session gracefully
             kill \$SHELL_PID
-            wait \$SHELL_PID || true  # Ignore exit if already stopped
-            
-            # Check logs for extension-related errors (customized for your extension's log prefix and general failures)
+            wait \$SHELL_PID || true
             cat /tmp/shell.log
             if [ ! -f /tmp/shell.log ] || grep -iqE 'error|failed|crash|center-window@mmc failed' /tmp/shell.log; then
               echo 'Extension load failed - see logs'; exit 1;
